choreography/rest2stream/deploy/manifests/dev/complex_rest2stream.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    app: rest2stream
  name: choreography
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: rest2stream
  name: rest2stream
  namespace: choreography
spec:
  ports:
  - port: 3000
  selector:
    app: rest2stream
---
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    linkerd.io/inject: enabled
  labels:
    app: rest2stream
  name: rest2stream
  namespace: choreography
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rest2stream
  template:
    metadata:
      annotations:
        linkerd.io/inject: enabled
      labels:
        app: rest2stream
        namespace: choreography
    spec:
      containers:
      - env:
        - name: APP_ENVIRONMENT
          value: dev
        image: registry4streampg.localhost:56789/rest2stream:rest2stream-v0.0.1
        imagePullPolicy: Always
        livenessProbe:
          httpGet:
            path: /healthz
            port: 3000
          initialDelaySeconds: 3
          periodSeconds: 10
        name: rest2stream
        ports:
        - containerPort: 3000
        resources:
          limits:
            cpu: "2"
            memory: 128Mi
          requests:
            cpu: 250m
            memory: 16Mi
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: mkcert-cluster-issuer
    jaeger-collector-host: observability-opentelemetry-collector.observability
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/enable-opentracing: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
  labels:
    app: rest2stream
  name: rest2stream
  namespace: choreography
spec:
  defaultBackend:
    service:
      name: rest2stream
      port:
        number: 3000
  tls:
  - hosts:
    - rest2stream.choreography.dev
    secretName: rest2stream-choreography-dev
